[tool.poetry]
name = "radiumit"
version = "0.1.0"
description = ""
authors = ["atabekdemurtaza <mychannel21war@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.9.5"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.8"
aioresponses = "^0.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
